<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Conversor">

    <Button
        android:id="@+id/button6"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:onClick="voltaAoMenu"
        android:text="@string/btnvoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaida" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/disp2"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerA" />

    <Spinner
        android:id="@+id/spinnerB"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/viewTit"
        android:textAlignment="center"
        android:textSize="15pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerA"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctxInsrt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/disp1"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnConv"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:onClick="convertUni"
        android:text="@string/btnTconv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerB" />

    <TextView
        android:id="@+id/txtSaida"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConv" />

    <EditText
        android:id="@+id/ctxInsrt"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>